Bug 619330 Unknown error alert displayed when trying to print from computer that has no installed printer r=mats a=blocking